--- a/.github/workflows/solar-system1.yml
+++ b/.github/workflows/solar-system1.yml
@@ -1,3 +1,4 @@
+
 name: Solar System Workflow
 
 on:
@@ -38,3 +39,34 @@ jobs:
 
         - name: Unit Testing 
           run: npm test
+        
+        - name: Archive Test Result
+          uses: actions/upload-artifact@v4
+          with:
+            name: Mocha_Test-Result 
+            path: test-results.xml
+
+    code-coverage:
+        name: Code Coverage
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+
+        - name: Setup NodeJS Version - 18
+          uses: actions/setup-node@v3
+          with:
+            node-version: 18
+
+        - name: Install Dependencies
+          run: npm install
+
+        - name: Check Code Coverage
+          run: npm run coverage
+        
+        - name: Archive Test Result
+          uses: actions/upload-artifact@v4
+          with:
+            name: Code-Coverage-Result
+            path: coverage
+            retention-days: 5
